azure-deployment/k8s/legend-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: legend
  labels:
    name: legend
    app: legend-platform
